[project]
name = "nvidia-gpu-stock-checker"
version = "0.1.0"
description = "Monitors NVIDIA's website for RTX 5090 FE availability and sends SMS notifications"
authors = [
    {name = "Sam Sipe", email = "sam@sipe.io"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
twilio = "^8.10.0"
selenium = "^4.29.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
